added navBar and infoicon that directs to about page

--- a/SpellChecker/app/src/main/AndroidManifest.xml
+++ b/SpellChecker/app/src/main/AndroidManifest.xml
@@ -9,23 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity
+            android:name=".aboutPage"
+            android:label="@string/title_activity_about_page"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".Movie"
             android:label="@string/title_activity_main2"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-
-        <activity android:name=".DetailActivity"></activity>
-
-
-
-
-
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".DetailActivity" />
         <activity android:name=".MainActivity">
-
-
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
