--- a/SpellChecker/app/src/main/AndroidManifest.xml
+++ b/SpellChecker/app/src/main/AndroidManifest.xml
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.spellchecker">
+
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="com.example.spellchecker.Permission.MAP_RECEIVE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <permission
+        android:name="com.example.spellchecker.Permission.MAP_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+    <uses-feature android:name="android.hardware.location.gps" />
+
+
 
     <application
         android:allowBackup="true"
@@ -8,15 +29,43 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/google_maps_api_key"/>
+
+        <activity
+            android:name=".MapsActivity"
+            android:label="Maps"
+            android:parentActivityName=".MapsActivity"/>
+
+        <activity
+            android:name=".TeamActivity"
+            android:label="Team"
+            android:parentActivityName=".MainActivity"/>
+
+        <activity
+            android:name=".CamsLocation"
+            android:label="Camera Locations"
+            android:parentActivityName=".CamsLocation"/>
+
         <activity
             android:name=".aboutPage"
             android:label="@string/title_activity_about_page"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+
         <activity
             android:name=".Movie"
             android:label="@string/title_activity_main2"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <activity android:name=".DetailActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
